add store sample website

--- a/src/assets/demos/store/i18n/en.json
+++ b/src/assets/demos/store/i18n/en.json
@@ -1,6 +1,6 @@
 {
   "HEADER": {
-    "TITLE": "Store Business",
+    "TITLE": "Store Business [DEMO TRANSLATION LOADED]",
     "HOME": "Home",
     "SHOP": "Shop",
     "CART": "Cart",
