--- a/src/assets/demos/store/i18n/es.json
+++ b/src/assets/demos/store/i18n/es.json
@@ -1,6 +1,6 @@
 {
   "HEADER": {
-    "TITLE": "Tienda de Negocios",
+    "TITLE": "Tienda de Negocios [DEMO TRANSLATION LOADED]",
     "HOME": "Inicio",
     "SHOP": "Tienda",
     "CART": "Carrito",
