--- a/src/assets/demos/store/i18n/fr.json
+++ b/src/assets/demos/store/i18n/fr.json
@@ -1,6 +1,6 @@
 {
   "HEADER": {
-    "TITLE": "Magasin d'Affaires",
+    "TITLE": "Magasin d'Affaires [DEMO TRANSLATION LOADED]",
     "HOME": "Accueil",
     "SHOP": "Boutique",
     "CART": "Panier",
@@ -10,16 +10,16 @@
     "LOGOUT": "Déconnexion"
   },
   "HOME": {
-    "HERO_TITLE": "Bienvenue à Notre Magasin",
+    "HERO_TITLE": "Bienvenue dans Notre Boutique",
     "HERO_SUBTITLE": "Découvrez des produits incroyables à des prix imbattables",
     "SHOP_NOW": "Acheter Maintenant",
     "WHY_SHOP": "Pourquoi Acheter Chez Nous",
     "FEATURE_QUALITY": "Produits de Qualité",
-    "FEATURE_QUALITY_DESC": "Nous n'offrons que les meilleurs produits soigneusement sélectionnés pour nos clients",
+    "FEATURE_QUALITY_DESC": "Nous offrons uniquement les meilleurs produits soigneusement sélectionnés pour nos clients",
     "FEATURE_SHIPPING": "Livraison Rapide",
-    "FEATURE_SHIPPING_DESC": "Livraison gratuite sur toutes les commandes avec un service rapide et fiable",
+    "FEATURE_SHIPPING_DESC": "Livraison gratuite sur toutes les commandes avec une livraison rapide et fiable",
     "FEATURE_SECURE": "Paiements Sécurisés",
-    "FEATURE_SECURE_DESC": "Vos informations de paiement sont toujours en sécurité avec nous",
+    "FEATURE_SECURE_DESC": "Vos informations de paiement sont toujours sûres et sécurisées avec nous",
     "FEATURE_SUPPORT": "Support 24/7",
     "FEATURE_SUPPORT_DESC": "Notre équipe de support client est toujours prête à vous aider",
     "CTA_TITLE": "Prêt à Commencer vos Achats?",
@@ -39,7 +39,7 @@
     "PRICE": "Prix",
     "STOCK": "Stock",
     "IN_STOCK": "En Stock",
-    "OUT_OF_STOCK": "Rupture de Stock",
+    "OUT_OF_STOCK": "Épuisé",
     "AVAILABLE": "disponible",
     "QUANTITY": "Quantité",
     "CONTINUE_SHOPPING": "Continuer les Achats"
@@ -53,18 +53,18 @@
     "SHIPPING": "Livraison",
     "FREE": "Gratuit",
     "TOTAL": "Total",
-    "CHECKOUT": "Passer à la Caisse",
+    "CHECKOUT": "Procéder au Paiement",
     "CLEAR": "Vider le Panier",
     "CONTINUE": "Continuer les Achats"
   },
   "CHECKOUT": {
-    "TITLE": "Caisse",
+    "TITLE": "Commande",
     "SHIPPING_INFO": "Informations de Livraison",
     "PAYMENT_INFO": "Informations de Paiement",
     "FULL_NAME": "Nom Complet",
     "ADDRESS": "Adresse",
     "CITY": "Ville",
-    "STATE": "Province",
+    "STATE": "État/Province",
     "ZIP": "Code Postal",
     "COUNTRY": "Pays",
     "PHONE": "Téléphone",
@@ -79,13 +79,13 @@
   "AUTH": {
     "LOGIN_TITLE": "Connexion",
     "LOGIN_SUBTITLE": "Connectez-vous à votre compte",
-    "REGISTER_TITLE": "S'inscrire",
+    "REGISTER_TITLE": "Inscription",
     "REGISTER_SUBTITLE": "Créez votre compte",
-    "EMAIL": "Courriel",
-    "PASSWORD": "Mot de passe",
-    "CONFIRM_PASSWORD": "Confirmer le Mot de passe",
+    "EMAIL": "Email",
+    "PASSWORD": "Mot de Passe",
+    "CONFIRM_PASSWORD": "Confirmer le Mot de Passe",
     "NAME": "Nom Complet",
-    "LOGIN_BUTTON": "Connexion",
+    "LOGIN_BUTTON": "Se Connecter",
     "REGISTER_BUTTON": "S'inscrire",
     "NO_ACCOUNT": "Vous n'avez pas de compte?",
     "HAVE_ACCOUNT": "Vous avez déjà un compte?",
@@ -96,11 +96,11 @@
     "TITLE": "Mon Profil",
     "ACCOUNT_INFO": "Informations du Compte",
     "NAME": "Nom",
-    "EMAIL": "Courriel",
+    "EMAIL": "Email",
     "PHONE": "Téléphone",
     "ADDRESS": "Adresse",
     "ORDER_HISTORY": "Historique des Commandes",
-    "NO_ORDERS": "Aucune commande pour le moment",
+    "NO_ORDERS": "Aucune commande encore",
     "START_SHOPPING": "Commencer les Achats",
     "ORDER_ID": "Commande",
     "ORDER_DATE": "Date",
@@ -110,12 +110,12 @@
   },
   "FOOTER": {
     "COMPANY_NAME": "Magasin d'Affaires",
-    "TAGLINE": "Votre guichet unique pour des produits de qualité à des prix avantageux.",
+    "TAGLINE": "Votre guichet unique pour des produits de qualité à d'excellents prix.",
     "QUICK_LINKS": "Liens Rapides",
     "CONTACT": "Contact",
     "ADDRESS": "7227 Boulevard Newman, Unité 1504",
     "CITY": "Montréal, Québec, H8N 0H7",
-    "EMAIL": "Courriel",
+    "EMAIL": "Email",
     "PHONE": "Téléphone",
     "COPYRIGHT": "© 2025 Magasin d'Affaires. Tous droits réservés."
   },
